--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
   }
 
   .footer{
-    background-color: #6D9886;
+    /*background-color: #E8F6EF;*/
+    color: #E8F6EF;
     position: absolute;
-    top: 1400px;
+    top: 1200px;
   }
 
   </style>
@@ -118,7 +119,7 @@
     <p>Music: Slow Motion and Better Days by Bensound www.bensound.com</p>
   </div>
   <div class="footer-right">
-    <p>Social Media</p>
+  <!--  <p>Social Media</p> -->
   </div>
 </div>
 
