--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       border: 1px solid #E8F6EF;
       background-color: #1DB9C3;
       position: absolute;
-      top: 800px;
+      top: 850px;
     /*  left: 600px;*/
     }
 
@@ -47,6 +47,7 @@
     line-height: 2;
     font-size: 20px;
     background-color: #ECE7B4;
+    color:#6D9886;
   }
 
   .intro-image{
@@ -96,19 +97,14 @@
   <!-- <canvas id="myCanvas" width="300" height="300" style = "border:1px solid #000000;"></canvas>
 -->
 
-<div class="">
+<div class="intro-row">
   <canvas id="canvas"></canvas>
-  <img src="404701640water-ripples-close-up-animated-gif.gif" id="ripples" alt="">
+<!--  <img src="404701640water-ripples-close-up-animated-gif.gif" id="ripples" alt=""> -->
+<p>Leatherback turtles eat jellyfish. However in the ocean plastic bags look very similar.</p>
+<p>These turtles have been found with plastic bags inside them because they mistook them for food</p>
+<p>See if you can avoid the plastic bags.</p>
+<p>Refresh the page if you lose.</p>
 </div>
-
-<audio id="music" src="bensound-betterdays.mp3">
-</audio>
-
-<audio id="music2" src="bensound-slowmotion.mp3">
-</audio>
-
-<button type="button" onclick="play()">Play Music</button>
-<button type="button" onclick="pause()">Pause Music</button>
 
 <div class="footer">
   <div class="footer-left">
@@ -120,6 +116,14 @@
   </div>
   <div class="footer-right">
   <!--  <p>Social Media</p> -->
+  <audio id="music" src="bensound-betterdays.mp3">
+  </audio>
+
+  <audio id="music2" src="bensound-slowmotion.mp3">
+  </audio>
+
+  <button type="button" onclick="play()">Play Music</button>
+  <button type="button" onclick="pause()">Pause Music</button>
   </div>
 </div>
 
