--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     </div> -->
   </div>
 
-  <div class="title">
+  <!--<div class="title">
     <h1 style="color:#6D9886;">Sea Turtles</h1>
-  </div>
+  </div>-->
 
   <div class="row">
     <div class="col-md-6">
