--- a/index.html
+++ b/index.html
@@ -45,9 +45,22 @@
       width: 100%;
     }
 
+    hr{
+      border-style: none;
+      border-top-style: dotted;
+      border-width: thick;
+      border-color: #CEE5D0;
+      width: 5%;
+      margin: 50px auto 50px auto;
+    }
+
     .col-md-6{
       padding: 20px 50px 0px 50px;
       text-align: center;
+    }
+
+    .col-md-4{
+      padding: 20px 50px 0px 50px;
     }
 
     .title {
@@ -63,9 +76,16 @@
     /*  padding-right: 40px;
     }*/
 
+    .sea-photo{
+      width: 80%;
+      padding: 50px 50px 50px 50px;
+
+    }
+
     .footer {
       /*background-color: #E8F6EF;*/
       text-align: center;
+      color: #DBD0C0;
             /*position: absolute;
       top: 1200px;*/
     }
@@ -91,18 +111,22 @@
 
   <div class="row">
     <!--  <img src="TurtleBanner.png" class="banner" alt="" width="1000"> -->
-    <div class="col-md-6">
+    <div class="col-md-4">
     <!--  <canvas id="canvas">Your browser does not support HTML5</canvas> -->
-
       <img src="pexels-belle-co-847393.jpg" alt="turtle in swimming in a green-coloured sea">
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
       <img src="pexels-richard-segal-1618606.jpg" alt="turtle swimming out of screen">
+    </div>
+    <div class="col-md-4">
+      <img src="pexels-tom-fisk-668867.jpg" alt="">
     </div>
   <!--  <div class="col-md-4">
       <img src="pexels-tom-fisk-668867.jpg" alt="turtle in a dark purple sea" width=500px>
     </div> -->
   </div>
+
+  <hr>
 
   <!--<div class="title">
     <h1 style="color:#6D9886;">Sea Turtles</h1>
@@ -114,28 +138,65 @@
     </div>
     <div class="col-md-6">
       <h2 style="color:#6D9886;">Turtles</h2>
-      <p style="color:#6D9886;">Turtles include sea-dwellers and land-dwellers. Tortoises live on land, terrapins in fresh-water and sea turtles, you guessed it, in the sea.</p>
-      <p style="color:#6D9886;">In Britain, sea turtles, tortoises and terrapins are considered as distinct groups.</p>
-      <p style="color:#6D9886;">There are different species of sea turtles including the leatherback turtles.</p>
-      <p style="color:#E8F6EF;">Leatherback turtles eat jellyfish. However in the ocean plastic bags look very similar.</p>
-      <p style="color:#E8F6EF;">These turtles have been found with plastic bags inside them because they mistook them for food</p>
-      <p style="color:#E8F6EF;">See if you can avoid the plastic bags in this <a href="game.html">Game</a></p>
+      <p style="color:#6D9886;">Turtles are a category of reptiles that have a shell devloped from their exoskeleton.</p>
+      <p style="color:#6D9886;">Turtles include sea-dwellers and land-dwellers; tortoises live on land, terrapins in fresh-water and sea turtles, you guessed it, in the sea.</p>
+      <p style="color:#6D9886;">In Britain, sea turtles, tortoises and terrapins are considered as distinct groups, and not turtles, like other countries.</p>
+      <p style="color:#E8F6EF;">There are seven different species of sea turtles including the leatherback turtles.</p>
+      <p style="color:#E8F6EF;">Sea turtles lived along dinosaurs. They have been around for 100 million years.</p>
+      <p style="color:#E8F6EF;">However, their survival now is in danger.</p>
     </div>
   </div>
   <!-- <canvas id="myCanvas" width="300" height="300" style = "border:1px solid #000000;"></canvas>
 -->
 
-  <div class="" style="position:absolute; bottom:0px; left:50px;">
+<hr>
 
-    <!--  <img src="404701640water-ripples-close-up-animated-gif.gif" id="ripples" alt=""> -->
+<div class="row">
+  <div class="col-md-6">
+    <h2 style="color:#6D9886;">Sea Turtles' Survival</h2>
+    <p style="color:#6D9886;">Of the seven species of sea turtles, six of them are endangered.</p>
+    <p style="color:#6D9886;">According to the WWF 50% of marine turtles have eaten plastic or other human rubbish. Plastic can also fill up beaches, reducing space for nesting turtles.</p>
+    <p style="color:#6D9886;">Turtles can also get caught in fishing nets during fishing, or when the nets are thrown away.</p>
+    <p style="color:#E8F6EF;">Sea turtles are also threatened by climate change, which can destroy nests from flooding. Other habitats are also being affected.</p>
+    <p style="color:#E8F6EF;">Coral reefs are being destroyed by overfishing, pollution, and hurricanes, as well as being removed to make jewellery.</p>
+    <p style="color:#E8F6EF;">Only 50% of coral reefs are left.</p>
+    <h2 style="color:#E8F6EF;"
+    >Jellyfish or Plastic Bag</h2>
+    <p style="color:#E8F6EF;">Leatherback turtles eat jellyfish. However in the ocean plastic bags look very similar.</p>
+    <p style="color:#E8F6EF;">These turtles have been found with plastic bags inside them because they mistook them for food</p>
+    <p style="color:#E8F6EF;">See if you can avoid the plastic bags in this <a href="game.html">Game</a></p>
   </div>
+  <div class="col-md-6">
+    <img src="pexels-may-law-4702369.jpg" alt="">
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div class="col-md-6">
+    <img src="pexels-maahid-photos-5175257.jpg" class="intro-image" alt="turtle swimming above coral" />
+  </div>
+  <div class="col-md-6">
+    <h2 style="color:#6D9886;">What you can do</h2>
+    <p style="color:#6D9886;">Reduce the amount of fish you eat. The nets that kill turtles are used for fishing.</p>
+    <p style="color:#6D9886;">Use rucksacks for shopping, or biodegradable paper bags.</p>
+    <p style="color:#6D9886;">Buy products using recyclable cardboard rather than plastic.</p>
+    <p style="color:#E8F6EF;">Check that the jewellery you buy does not contain coral.</p>
+    <p style="color:#E8F6EF;">Support companies that use reused or recycled materials.</p>
+    <p style="color:#E8F6EF;">Join climate activist groups that lobby for more environmental policies.</p>
+  </div>
+</div>
+
+<hr>
 
   <div class="footer">
     <div class="footer-left">
       <h3>Credits</h3>
-      <p>
-        Photos by Belle Co, Richard Segal, Tom Fisk and Keemkai Villadums from Pexels
-      </p>
+      <p style="color:#DBD0C0;">
+        Photos by <a href="https://www.pexels.com/photo/photo-of-a-turtle-swimming-underwater-847393/">Belle Co</a>, <a href="https://www.pexels.com/photo/black-and-white-turtle-1618606/">Richard Segal</a>, <a href="https://www.pexels.com/photo/underwater-photography-of-brown-sea-turtle-668867/">Tom Fisk</a>, <a href="https://www.pexels.com/photo/brown-turtle-in-underwater-photography-2435728/">Keemkai Villadums</a>,</p>
+      <p style="color:#DBD0C0;">as well as May Law and Maahid Photos from Pexels.</p>
+
     </div>
 
   <script type="text/javascript">
